<resources>
    <string name="app_name">MVPtest</string>
    <string name="user_id">ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="id_error">ID cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="votes_count_text">%1$s votes</string>
    <string name="views_count_text">%1$s views</string>
    <string name="answers_count">%1$s answers</string>
    <string name="unwanted_commercial_content_or_spam">Unwanted commercial content or spam</string>
    <string name="hate_or_rude_speach">Hate or rude speach</string>
    <string name="other">Other...</string>
    <string name="sign_in_prompt_text">Sign In</string>
    <string name="welcome_text">Welcome to Astghik MC.\nPlease enter your ID and password.</string>
    <string name="helpful_answer_text">Helpful answer</string>
    <string name="reply_text">Reply</string>
    <string name="report_test">Report</string>
    <string name="choose_reason_text">Choose reason</string>
    <string name="cancel_text">Cancel</string>
    <string name="report_text">Report</string>
    <string name="write_report_reason_text">Write report reason...</string>
    <string name="send_text">Send</string>
    <string name="write_comment_text">Write comment</string>
    <string name="type_your_comment_text">Type your comment...</string>
</resources>
