<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        tools:context=".ui.signin.SignInActivity">

        <TextView
            android:id="@+id/tv_sign_in_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/airbnb_cereal_medium"
            android:text="@string/sign_in_prompt_text"
            android:textAllCaps="true"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="@+id/et_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in_prompt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/airbnb_cereal_book"
            android:text="@string/welcome_text"
            app:layout_constraintStart_toStartOf="@+id/et_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_prompt" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_sign_in_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/user_id"
            android:paddingStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_prompt_small"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_sign_in_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_sign_in_btn"
            android:elevation="16dp"
            android:fontFamily="@font/airbnb_cereal_medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>