<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_choose_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/airbnb_cereal_book"
            android:text="Choose reason"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/airbnb_cereal_book"
            android:text="Cancel"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_do_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/airbnb_cereal_book"
            android:text="Report"
            android:textSize="16sp"
            android:textColor="@color/color_E5324A"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/ll_wrapper"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_unwanted_commercial"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/airbnb_cereal_book"
            android:gravity="center|start"
            android:maxLines="1"
            android:text="@string/unwanted_commercial_content_or_spam"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:visibility="visible" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tv_hate_or_rude_speach"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/airbnb_cereal_book"
            android:gravity="center|start"
            android:text="@string/hate_or_rude_speach"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tv_other"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:fontFamily="@font/airbnb_cereal_book"
            android:gravity="center|start"
            android:text="@string/other"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <EditText
        android:visibility="gone"
        android:id="@+id/et_report_text"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:textCursorDrawable="@null"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/airbnb_cereal_book"
        android:gravity="start|top"
        android:hint="Write report reason..."
        android:inputType="textMultiLine"
        android:maxLength="220"
        android:padding="16dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray"
        android:textSize="18dp"
        android:theme="@style/CreateNewOilActivityEditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close" />


</LinearLayout>